samples/_failures_safe/1761305856_c95006_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8276ee8e.c: In function ‘parser_expect’:
./samples/SAFE/__tmp_8276ee8e.c:159:5: error: expected declaration or statement at end of input
  159 |     if (parser->current_token.type != expected_type) {
      |     ^~
./samples/SAFE/__tmp_8276ee8e.c:159:5: error: expected declaration or statement at end of input
